# arc-agent-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint-test-python.yml  publish-codeartifact.yml
src/arc_agent_framework/: core.py  types.py  util.py
swarm/: azure_client.py  core.py
tests/: mock_client.py  test_core.py  test_util.py
